--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^19.0.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.2",
     "expo": "~49.0.15",
+    "expo-camera": "~13.4.4",
+    "expo-media-library": "~15.4.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
@@ -21,7 +24,11 @@
     "react-native": "0.72.6",
     "react-native-animated-otp-input": "^0.1.7",
     "react-native-reanimated": "~3.3.0",
-    "react-native-web": "~0.19.6"
+    "react-native-video": "^5.2.1",
+    "react-native-web": "~0.19.6",
+    "expo-av": "~13.4.1",
+    "expo-task-manager": "~11.3.0",
+    "expo-secure-store": "~12.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
