--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-web": "~0.19.6",
     "expo-av": "~13.4.1",
     "expo-task-manager": "~11.3.0",
-    "expo-secure-store": "~12.3.1"
+    "expo-secure-store": "~12.3.1",
+    "expo-local-authentication": "~13.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
